--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,12 @@ dependencies:
   dio: ^4.0.0
   mockito: ^5.0.5
   tuple: ^2.0.0
+  equatable: ^0.4.0
+  # Functional programming thingies
+  dartz: ^0.8.6
+  # Remote API
+  connectivity: ^0.4.3+7
+  shared_preferences: ^0.5.3+4
 
 
 dev_dependencies:
