--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,11 +21,11 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  get_it: ^7.1.4
   flutter:
     sdk: flutter
   bloc: ^7.0.0
   flutter_bloc: ^7.0.0
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -37,13 +37,13 @@ dependencies:
   # Functional programming thingies
   dartz: ^0.8.6
   # Remote API
-  connectivity: ^0.4.3+7
+  data_connection_checker: ^0.3.4
   shared_preferences: ^0.5.3+4
-
+  
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  # flutter_test:
+  #   sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
