--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   # Remote API
   data_connection_checker: ^0.3.4
   shared_preferences: ^0.5.3+4
+  internet_connection_checker: ^0.0.1+1
   
 
 dev_dependencies:
