--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ environment:
 
 dependencies:
   get_it: ^7.1.4
+  video_player:
   flutter:
     sdk: flutter
   bloc: ^7.0.0
@@ -40,6 +41,7 @@ dependencies:
   data_connection_checker: ^0.3.4
   shared_preferences: ^0.5.3+4
   internet_connection_checker: ^0.0.1+1
+  
   
 
 dev_dependencies:
@@ -62,7 +64,12 @@ flutter:
     - assets/images/logo2.png
     - assets/images/foto1.jpg
     - assets/images/bc_home.png
+    - assets/images/bc_home_d.png
+    - assets/images/bc_home_dd.png
     - assets/images/nota.png
+    - assets/images/TelaDeLogin.png
+    - assets/images/ClipartKey_53820.png
+    - assets/images/Vingadores_  Ultimato _ Trailer 2 Legendado.mp4
     
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
