--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,13 +34,14 @@ dependencies:
   dio: ^4.0.0
   mockito: ^5.0.5
   tuple: ^2.0.0
-  equatable: ^0.4.0
+  equatable: ^2.0.0-nullsafety.4
   # Functional programming thingies
-  dartz: ^0.8.6
+  dartz: ^0.10.0-nullsafety.1
   # Remote API
   data_connection_checker: ^0.3.4
   shared_preferences: ^0.5.3+4
   internet_connection_checker: ^0.0.1+1
+  youtube_player_flutter: ^8.0.0
   
   
 
